# CppND-Capstone

./: CMakeLists.txt  README.md
data/cubes/: 1578425127.frame  1578425149.frame  1578425163.frame  1578425172.frame  1578425184.frame  1578425192.frame  1578425200.frame  1578425207.frame
src/: Align.cpp  Capture.cpp  DepthCapture.h  DepthFrame.cpp  DepthFrame.h  FileDepthCapture.cpp  FileDepthCapture.h  FileViewer.cpp  FrameUtils.h  KinectDepthCapture.cpp  KinectDepthCapture.h  KinectViewer.cpp  cxxopts.h  main.cpp
